Revert "Fix stretch support"
This reverts commit a38e42678567139bd95bbe2d32fa8c551f1ebb64.

--- a/test/cases/intrinsic.out.css
+++ b/test/cases/intrinsic.out.css
@@ -1,6 +1,5 @@
 a {
   width: -webkit-fill-available;
-  width: -webkit-stretch;
   width: -moz-available;
   width: stretch;
 }
@@ -22,14 +21,12 @@ p {
 
 .outdated {
   width: -webkit-fill-available;
-  width: -webkit-stretch;
   width: -moz-available;
   width: fill;
 }
 
 .old {
   width: -webkit-fill-available;
-  width: -webkit-stretch;
   width: -moz-available;
   width: fill-available;
 }
